# graphql-sync-dataloaders

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
graphql_sync_dataloaders/: __init__.py  exceptions.py  execution_context.py  sync_dataloader.py  sync_future.py
tests/: test_dataloader.py  test_sync_future.py
tests/django/: django_settings.py  test_graphene_django.py  test_strawberry_django.py
tests/django/app/: dataloaders.py  graphene_schema.py  models.py  strawberry_schema.py  urls.py  views.py
