[tool.poetry]
name = "graphql-sync-dataloaders"
version = "0.1.1"
description = "Use DataLoaders in your Python GraphQL servers that have to run in a sync context (i.e. Django)."
authors = ["Jonathan Kim <hello@jkimbo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "graphql_sync_dataloaders"}]
keywords = ["graphql", "Django", "strawberry-graphql"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

homepage = "https://github.com/jkimbo/graphql-sync-dataloaders"
repository = "https://github.com/jkimbo/graphql-sync-dataloaders"

[tool.poetry.dependencies]
python = "^3.8"
graphql-core = "~3.2.0"

[tool.poetry.group.dev.dependencies]
Django = "^4.1.1"
strawberry-graphql = "^0.131.5"
graphene-django = "3.0.0b8"
pytest = "^7.1.3"
black = "^22.8.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s"
DJANGO_SETTINGS_MODULE = "tests.django.django_settings"
testpaths = ["tests/"]
markers = ["django"]
